--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,7 +38,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: demo.${{ env.GITHUB_SHA }}
+        tag_name: latest
         release_name: demo-${{ env.GITHUB_SHA }}
         draft: true
         prerelease: false
