--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: latest
-        release_name: demo-${{ env.GITHUB_SHA }}
+        release_name: demo-${{ github.GITHUB_SHA }}
         draft: true
         prerelease: false
 
