--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: tarea7.${{ github.sha }}
-        release_name: Tarea 7 Cloud github.sha
+        release_name: Tarea 7 Cloud ${{ github.sha }}
         draft: true
         prerelease: false
 
@@ -49,7 +49,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./dist/tarea7_cloud2022/build.zip
-        asset_name: build.zip
+        asset_name: build-${{ github.sha }}.zip
         asset_content_type: application/zip
 
     - uses: eregon/publish-release@v1
